Added responsive design and change the style a bit

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A small counter website made explicitly for Darko Jovanovic. Use with caution."
     />
     <title>Darko's Words Counter</title>
   </head>
