Added google verification

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="A small counter website made explicitly for Darko Jovanovic. Use with caution."
     />
+    <meta
+      name="google-site-verification"
+      content="s6s496GlhXEOi_YQQ-O5HlLUsm_ldnUU4VyYZEjq3TE"
+    />
     <title>Darko's Words Counter</title>
   </head>
   <body>
